--- a/style.css
+++ b/style.css
@@ -1,15 +1,93 @@
 html {
   font-size: clamp(12px, 1.2vw, 16px);
+  scroll-behavior: smooth;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial;
+  font-family: 'Poppins', sans-serif;
 }
 
 .home {
-    height: 100vh;
-    background-color: #0D1117;
+  height: 100vh;
+  background-color: #0D1117;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20%;
+}
+
+.navbar {
+  width: 50%;
+  display: flex;
+  gap: 9%;
+  padding: 1rem 2rem;
+  font-weight: 700;
+  transition: all 0.4s ease-in-out;
+}
+
+.nav-options {
+  font-size: 1.2rem;
+  color: white;
+  text-decoration: none;
+  position: relative;
+  transition: color 0.3s ease-in-out;
+}
+
+.nav-options::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 0;
+  height: 2px;
+  background-color: #00f0ff;
+  transition: width 0.4s ease-in-out;
+}
+
+.home-btn::after {
+  width: 100%;
+}
+
+.home-btn {
+  color: #00f0ff;
+}
+
+.nav-options:hover {
+  color: #00f0ff;
+}
+
+.nav-options:hover::after {
+  width: 100%;
+}
+
+.port-heading {
+  display: inline-block;
+  color: #fff;
+}
+
+@media (max-width: 450px) {
+  .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .port-heading {
+    display: none;
+  }
+
+  .navbar {
+    width: 90%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .nav-options {
+    font-size: 1rem;
+  }
 }
