--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ html {
   justify-content: center;
   align-items: center;
   color: white;
-  margin-top: 3rem;
+  margin-top: 10vh;
   /* gap: 0.5rem; */
   font-size: 2rem;
 }
