--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
   font-size: clamp(12px, 1.2vw, 16px);
   scroll-behavior: smooth;
   background-color: #0D1117;
+  color: white;
 }
 
 * {
@@ -9,6 +10,11 @@ html {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .home {
@@ -148,35 +154,63 @@ html {
   margin-left: auto;
   margin-right: auto;
   background-color: #0D1117;
-  width: 90%;
+  width: 95%;
   position: relative;
   z-index: 2;
   padding: 1.5rem 2rem 4rem 2rem;
   margin-top: 110vh;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   border: 2px solid rgba(255, 255, 255, 0.2);
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.5),
               0 0 40px rgba(255, 255, 255, 0.3),
               0 0 60px rgba(255, 255, 255, 0.2);
   transition: box-shadow 0.3s ease-in-out;
   border-radius: 10px;
+  scroll-margin-top: 15px;
 }
 
-.skills h1 {
-  font-size: 2rem;
-  color: white;
+.type-wrapper {
+  width: 40%;
+  border: 1px solid white;
+  border-radius: 7px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+  display: flex;
+  flex-direction: column;
 }
 
-ul {
+@media (max-width: 665px) {
+  .type-wrapper {
+    width: 100%;
+  }
+}
+
+.skills-container {
+  align-self: center;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
   gap: 2rem;
-  padding-bottom: 3rem;
 }
 
-li {
+.section h1 {
+  font-size: 2rem;
+  color: white;
+  margin-bottom: 0.5rem;
+}
+
+.skills ul {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  flex-wrap: wrap;
+  gap: 2rem;
+  /* padding-bottom: 3rem; */
+}
+
+.skills li {
   border: 2px solid white;
   border-radius: 1rem;
   padding: 8px;
@@ -186,10 +220,24 @@ li {
   width: 5rem;
   background-color: #222;
   transition: all 0.3s ease-in-out;
+  /* animation: rotate 2s ease-in-out infinite alternate; */
 }
 
-li:hover {
+@keyframes rotate {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(90deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+.skills li:hover {
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 #html-icon {
@@ -202,6 +250,14 @@ li:hover {
 
 #js-icon {
   fill: #F7DF1E;
+}
+
+#typeScrip-icon {
+  fill: #3178C6;
+}
+
+#react-icon {
+  fill: #61DAFB;
 }
 
 #java-icon {
@@ -248,4 +304,62 @@ li:hover {
   color: rgba(255, 255, 255, 0.77);
   font-weight: 100;
   font-size: medium;
+}
+
+/* ------------------------------------------------Projects------------------------------------------------- */
+
+.projects {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #0D1117;
+  width: 90%;
+  position: relative;
+  z-index: 2;
+  padding: 1.5rem 2rem 4rem 2rem;
+  /* margin-top: 110vh; */
+  margin-bottom: 2rem;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.5),
+              0 0 40px rgba(255, 255, 255, 0.3),
+              0 0 60px rgba(255, 255, 255, 0.2);
+  transition: box-shadow 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+/* .project {
+  border: 1px solid white;
+  border-radius: 1rem;
+} */
+
+.project-one {
+  
+}
+
+.projects h2 {
+  font-size: 1.5rem;
+  color: white;
+  text-decoration: solid;
+}
+
+.projects h3 {
+  padding-left: 1rem;
+  font-size: 1rem;
+  color: white;
+}
+
+.project-heading {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.projects li {
+  padding-left: 1rem;
+  font-size: 1rem;
+  font-weight: 100;
+}
+
+.projects h4 {
+  padding-left: 1rem;
+  margin-top: 1rem;
 }
